# bmo-cafe

./: .gitignore  README.md  generate_task.py  lexicon.yaml  main.py  pyproject.toml  schedule_task.py  update_lexicon.py
master/: index.yaml
models/: claude.py  oai.py  test.py
references/: sv-musical-lyrics.md
tasks/check_sf_parking_tickets/: config.yaml  index.py
tasks/double_number/: config.yaml  index.py  tests.csv
tasks/hello_world/: config.yaml  index.py
tasks/solve_imo_problem/: config.yaml  index.py  results.csv  tests.csv
utils/: config.py  finetune_openai.py  helpers.py  model_list.py
